# DiceFeud

./: CMakeLists.txt
src/: board.cpp  board.h  color.h  dicefeud.cpp  dicefeud.h  display.cpp  display.h  main.cpp  player.h  tile.cpp  tile.h
src/behavior/: ai_easy.cpp  ai_easy.h  ai_hard.cpp  ai_hard.h  ai_medium.cpp  ai_medium.h  human.cpp  human.h
